fix(escala-fonte): substituir setScaleX/Y por overlay CSS dinâmico
O setScaleX/Y transformava geometricamente toda a árvore de nós,
causando overflow visual fora dos limites da janela. A nova abordagem:
- Lê o CSS do tema ativo e extrai todos os seletores com -fx-font-size
- Gera um arquivo CSS temporário com os tamanhos multiplicados pela escala
- Adiciona esse overlay como último stylesheet da cena (mesma especificidade,
  carregado por último = prevalece) sem alterar layout nem dimensões

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>